<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmileForME</string>

    <string name="btndonor">DONOR</string>
    <string name="btnngo">NGO</string>
    <string name="btnrecipient">RECIPIENT</string>
    <string name="btnadmin">ADMIN</string>

    <string name="uname">Username</string>
    <string name="namehint">Email/Mobile No.</string>
    <string name="password">Password</string>
    <string name="loginbtn">LOGIN</string>
    <string name="otpbox">Login with OTP</string>
    <string name="newdonorlogin">New Donor?</string>
    <string name="newrecipientlog">New Recipient?</string>
    <string name="signuprec">SIGN UP</string>
    <string name="bpl">BPL card Number</string>
    <string name="enterbpl">10-digit BPL Number</string>


    <string name="signup">SIGN UP</string>
    <string name="fullname">Full Name</string>
    <string name="fnamehint">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="dobhint">10/05/1999</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Others</string>
    <string name="email">Email</string>
    <string name="emailhint">name123@mail.com</string>
    <string name="dnamehint">John Doe</string>
    <string name="mobile">Mobile No.</string>
    <string name="mobhint">854796582</string>
    <string name="enterpwd">Re-enter Password</string>
    <string name="signin">SIGN IN</string>
    <string name="confirmpwd">CONFIRM PASSWORD</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="Verificationrequests">Requests for BPL Verification</string>

    <string name="enteremail">EMAIL</string>
    <string name="ngoid">10-Digit ID</string>
    <string name="ngoregistration">New NGO Registration?</string>
    <string name="reenterpwd">Re-enter Password</string>
    <string name="ngoid2">NGO ID</string>
    <string name="register">NGO Registration</string>
    <string name="ngoname">NGO Name</string>
    <string name="ngotype">Type of NGO</string>
    <string name="ngotype2">NGO type</string>
    <string name="mobile2">No.Linked with bank</string>
    <string name="ngodetails">NGO Details</string>
    <string name="ngodetails2">Details of NGO</string>
    <string name="detailsofproduct">Details of Item</string>
    <string name="producttype">Type of Item</string>
    <string name="productdetails">Details of Item</string>
    <string name="productimg">Image of Item</string>
    <string name="uploaditem">Upload Item</string>
    <string name="clothes">Clothes</string>
    <string name="img">Upload Image</string>
    <string name="viewngorqst">View NGO Requests</string>
    <string name="iditem">ID</string>
    <string name="viewitems">View Items</string>
    <string name="selecteditem">View selected item</string>
    <string name="noteforbpl">Note:Just enter BPL to view selected item</string>
    <string name="fordonoronly">For Donors:</string>
    <string name="ngonumber">NGO number Linked with account</string>
    <string name="Donate">Donate</string>
    <string name="ngolist">View NGO List</string>


    <string name="save">SAVE</string>
    <string name="donormain">What do you want to donate today?</string>
    <string name="food">Food</string>
    <string name="others">Others</string>
    <string name="noofproduct">Number of Items</string>
    <string name="donationlist">Smiles Gathered</string>
    <string name="aboutus">About Us</string>
    <string name="home">Home Page</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackform">Please share your experience!!</string>
    <string name="feedbackdetails">Let us know how can we \n improve ourselves</string>
    <string name="submit">Submit</string>
    <string name="feedbacksubmit">Feedback Submitted</string>
    <string name="cancel">Cancel</string>

    <string name="about"> <b>About SmileForMe</b> \n
      \n  SmileForMe is a public platform to give and receive charities.
The app is a noble initiative which makes providing donations and receiving donations much easier. \n
\n
Anyone who wants donate things like furniture, clothes, footwear, books, food etc can use this app.
This app can also be used to make large scale donations to charity organisations like NGOs. \n
\n
SmileForMe can be used by people who have a Below poverty line card for receiving donations. And NGOs can use
this app to register and receive donations. \n
\n
"One person can\'t help all. But all can help all." \n
\n
Let\'s use SmileForMe and spread smiles all around. \n
\n
How it Works \n
\n
For Donors \n
Step 1: Register with SmileForMe
\n
Step 2: Choose what you want to donate
\n
Step 3: You also have an option to remove any items uploaded for donations \n
\n
For Recipient \n
Step 1: Register with SmileForMe
\n
Step 2: Wait to be approved by admin
\n
Step 3: Check what items are available for donation
\n
Step 4: Choose the item you want
\n
Step 5: Wait for the donation to be approved by admin \n
\n
For NGO \n
Step 1: Register with SmileForMe
\n
Step 2: Wait to be approved by admin
\n
Step 3: Create your profile and wait for donations
\n
Step 4: When someone donates then the money will be credited to the NGO\'s bank account \n
\n
Important Notes:\n

SmileForMe doesn\'t work inter-city or state. You can give or accept donations if you belong to the same village,
town, or city. \n
\n
Version 1.0
\n
Created by - \n
Ramya Shree Tatikonda \n
Rishabh Garg \n
    </string>
    <string name="logout">Log Out</string>
    <string name="listofngo">Choose an NGO to donate :</string>

</resources>