<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_one"
        android:icon="@drawable/home"
        android:orderInCategory="101"
        android:title="@string/home"
        app:showAsAction="always"
        android:iconTint="#FFFFFF"/>

    <item
        android:id="@+id/action_two"
        android:icon="@drawable/ic_baseline_smile"
        android:orderInCategory="102"
        android:title="@string/donationlist"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_three"
        android:icon="@android:drawable/stat_notify_chat"
        android:iconTint="#FFFFFF"
        android:orderInCategory="103"
        android:title="@string/feedback"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_four"
        android:orderInCategory="104"
        android:title="@string/aboutus"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_five"
        android:orderInCategory="105"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>