<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4BD18BDD"
    tools:context=".RecipientSignup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/signuprecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signuprec"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2" >

        <TextView
            android:id="@+id/recipientname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dnamehint"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="60dp" />

        <TextView
            android:id="@+id/recipientdob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientdob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/dobhint"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="150dp" />

    </GridLayout>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/rmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"/>

        <RadioButton
            android:id="@+id/rfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/rother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

    </RadioGroup>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:id="@+id/recipientemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint"
            android:textSize="20dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/recipientmob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientmob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobhint"
            android:textSize="20dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/recipientpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/recipientpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpwd"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterrecipientpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterpwd"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/bpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpl"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/BPLcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterbpl"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

    </GridLayout>

    <Button
        android:id="@+id/recipientsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/signin"
        android:textStyle="bold"
        android:background="#FFFFFF"
        android:textSize="20dp" />

</LinearLayout>