<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4BD18BDD"
    tools:context=".Ngoregistration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/ngoregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2" >

        <TextView
            android:id="@+id/ngoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngoname"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngoname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dnamehint"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="60dp" />

        <TextView
            android:id="@+id/ngoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngoid2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/ngoid"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="150dp" />

    </GridLayout>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:id="@+id/ngoemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngoemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint"
            android:textSize="20dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/ngomob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngomob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile2"
            android:textSize="20dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/ngopwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngopwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/ngopass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpwd"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enterngopass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterpwd"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngotype2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/ngodetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:hint="@string/ngotype"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_columnWeight="1" />

    </GridLayout>

    <Button
        android:id="@+id/ngosignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/signin"
        android:textStyle="bold"
        android:background="#FFFFFF"
        android:textSize="20dp" />


</LinearLayout>