<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4BD18BDD"
    tools:context=".RecipientLogin">

    <TextView
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="50dp"
        android:text="@string/uname"
        android:textStyle="bold"
        android:background="#FFFFFF"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/unamerecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/namehint"
        android:textSize="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/recipientloginpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="50dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:background="#FFFFFF"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/recipientpwdprompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textSize="25dp"
        android:hint="@string/password"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/recipientlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipientpwdprompt"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"
        android:textSize="20dp"
        android:text="@string/loginbtn" />

    <CheckBox
        android:id="@+id/recipientbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/otpbox"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/newrecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/newrecipientlog"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipientsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/signuprec"
            android:textColor="#061778"
            android:textSize="20dp"
            android:onClick="recipientsignup" />

    </LinearLayout>


</LinearLayout>